--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<!-- Navbar BootStrap -->
+<nav class="navbar navbar-light bg-primary navbarExtra">
+  <a class="navbar-brand" href="#">
+   <h2 routerLink="/" class="text-light">PRACTICA CRUD ANGULAR</h2>
+  </a>
+
+  <button>Articulos</button>
+  <button >Trabajadores</button>
+  <button >Clientes</button>
+</nav>
+
+<br>
