Rutas en app-routing definidas y operativas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 
   <button>Articulos</button>
   <button >Trabajadores</button>
-  <button >Clientes</button>
+  <button routerLink="/clientes">Clientes</button>
 </nav>
 
 <br>
