Tabla de clientes

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,1 +1,4 @@
-<p>inicio works!</p>
+<br><br><br>
+<div style="background-color: aqua;">
+  <img src="../../../assets/inicio.jpg" style="width: 100%;">
+</div>
