--- a/src/app/components/clientes/cliente/cliente.component.html
+++ b/src/app/components/clientes/cliente/cliente.component.html
@@ -1,1 +1,30 @@
-<p>cliente works!</p>
+<div class="col mb-6">
+
+  <div class="card h-100">
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="../../../../assets/{{cliente.foto}}" alt="Card image cap">  <!-- completar src con la foto del cliente -->
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title"> {{cliente.nombre}} </h4>   <!-- Mostrar nombre del cliente -->
+      <h4> {{cliente.cargo}}</h4>                     <!-- Mostrar cargo del cliente -->
+      <!--Text-->
+      <p class="card-text">Votos: {{cliente.votos}}      <!-- Mostrar votos del cliente -->
+        <img src="../../assets/like.jpg" >     <!-- Mostrar en src imagen like.jpg   y llamar a funcion like   con el id del cliente -->
+        <img src="../../assets/unlike.jpg" >     <!-- Mostrar en src imagen unlike.jpg y llamar a funcion unlike con el id del cliente -->
+      </p>
+    </div>
+    <div class="text-center">
+      <button type="button" class="btn btn-danger" >Borrar cliente</button> <!--llamar a funcion eliminar con el id del cliente -->
+    </div>
+
+  </div>
+  <!-- Card -->
+</div>
