--- a/src/app/components/clientes/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes/clientes.component.html
@@ -1,1 +1,22 @@
-<p>clientes works!</p>
+
+<div style="margin-left: 35%;">
+  <div class="color-primary"><h2>LISTADO DE CLIENTES</h2></div>
+  <table class="border border-dark">
+    <td>
+    <tr *ngFor="let cliente of clientes" class="border border-dark text-center" >
+      <td class="border border-dark">{{cliente.id}}</td>
+      <td class="border border-dark">{{cliente.nombre}}</td>
+      <td class="border border-dark"><button class="btn btn-primary m-1">VER</button></td>
+      <td class="border border-dark"><button class="btn btn-warning m-1" >MODIFICAR</button></td>
+      <td class="border border-dark"><button class="btn btn-danger m-1" >BORRAR</button></td>
+    </tr>
+    </td>
+  </table>
+
+</div>
+<div class="text-center mt-5">
+  <button class="btn btn-success m-2">Nuevo</button>
+  <button routerLink="/" class="btn btn-secondary m-2">Volver</button>
+</div>
+
+
