--- a/src/app/components/clientes/cliente/cliente.component.html
+++ b/src/app/components/clientes/cliente/cliente.component.html
@@ -1,30 +1,12 @@
-<div class="col mb-6">
-
-  <div class="card h-100">
-    <!--Card image-->
-    <div class="view overlay">
-      <img class="card-img-top" src="../../../../assets/{{cliente.foto}}" alt="Card image cap">  <!-- completar src con la foto del cliente -->
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-    </div>
-
-    <!--Card content-->
+<div style="margin-left: 35%;">
+  <div class="ml-5 card text-center " style="width: 18rem;">
+    <h4>FICHA CLIENTE</h4>
+    <img src="./../../../../assets/{{cliente.foto}}" class="card-img-top text-center" alt="...">
     <div class="card-body">
-
-      <!--Title-->
-      <h4 class="card-title"> {{cliente.nombre}} </h4>   <!-- Mostrar nombre del cliente -->
-      <h4> {{cliente.cargo}}</h4>                     <!-- Mostrar cargo del cliente -->
-      <!--Text-->
-      <p class="card-text">Votos: {{cliente.votos}}      <!-- Mostrar votos del cliente -->
-        <img src="../../assets/like.jpg" >     <!-- Mostrar en src imagen like.jpg   y llamar a funcion like   con el id del cliente -->
-        <img src="../../assets/unlike.jpg" >     <!-- Mostrar en src imagen unlike.jpg y llamar a funcion unlike con el id del cliente -->
-      </p>
+      <h5 class="card-title">Nombre: {{cliente.nombre}}</h5>
+      <p class="card-text">Id: {{cliente.id}}</p>
+      <p class="card-text">Cargo: {{cliente.cargo}}</p>
+      <button routerLink="/clientes" class="btn btn-secondary m-2">VOLVER</button>
     </div>
-    <div class="text-center">
-      <button type="button" class="btn btn-danger" >Borrar cliente</button> <!--llamar a funcion eliminar con el id del cliente -->
-    </div>
-
   </div>
-  <!-- Card -->
 </div>
