Navigate en modificarCliente

--- a/src/app/components/clientes/cliente-modificar/cliente-modificar.component.html
+++ b/src/app/components/clientes/cliente-modificar/cliente-modificar.component.html
@@ -10,7 +10,7 @@
       <a>Cargo</a>
       <p class="card-text"><input [(ngModel)]="inputCargoModificar" name="inputCargoModificar" placeholder="Cargo" class="text-center"></p>
     </form>
-      <button (click)="modificarCliente()" routerLink="/clientes" class="btn btn-success m-2">ACEPTAR</button>
+      <button (click)="modificarCliente()"  class="btn btn-success m-2">ACEPTAR</button>
       <button routerLink="/clientes" class="btn btn-secondary m-2">VOLVER</button>
     </div>
   </div>
