Peticiones Http a medias

--- a/src/app/components/clientes/cliente/cliente.component.html
+++ b/src/app/components/clientes/cliente/cliente.component.html
@@ -10,3 +10,14 @@
     </div>
   </div>
 </div>
+<!-- peticiones -->
+<h3>Clientes</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Cargo</th>
+    </tr>
+  </thead>
+</table>
